--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "azure.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "webpack": "webpack",
-    "watch": "webpack-dev-server --content-base dist/web/ --hot --inline --progress --colors --watch-poll"
+    "build": "webpack --mode production",
+    "webpack": "webpack --mode production",
+    "watch": "webpack-dev-server --mode development --content-base dist/web/ --hot --inline --progress --colors --watch-poll"
   },
   "author": "",
   "license": "ISC",
@@ -16,8 +16,9 @@
     "copy-webpack-plugin": "^4.4.1",
     "showdown": "^1.8.6",
     "showdown-prettify": "^1.3.0",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.0.0",
     "write-file-webpack-plugin": "^4.2.0"
   },
   "dependencies": {
