--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "ace-builds": "^1.3.1",
+    "awesome-typescript-loader": "^3.4.1",
+    "concurrently": "^3.5.1",
     "copy-webpack-plugin": "^4.4.1",
+    "css-loader": "^0.28.10",
     "showdown": "^1.8.6",
     "showdown-prettify": "^1.3.0",
+    "style-loader": "^0.20.2",
     "webpack": "^4.0.0",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.0.0",
@@ -25,15 +29,13 @@
     "angular": "^1.6.9",
     "angular-animate": "^1.6.9",
     "angular-ui-ace": "^0.2.3",
-    "angular1-ui-bootstrap4": "^2.4.22",
-    "awesome-typescript-loader": "^3.4.1",
-    "bootstrap-css-only": "^4.0.0",
     "brace": "^0.11.1",
     "code-prettify": "^0.1.0",
     "d3": "^4.13.0",
     "font-awesome": "^4.7.0",
     "glyphicons-halflings": "^1.9.0",
     "js-yaml": "^3.10.0",
-    "typescript": "^2.7.2"
+    "typescript": "^2.7.2",
+    "ui-bootstrap4": "^3.0.2"
   }
 }
